--- a/Program-3.html
+++ b/Program-3.html
@@ -78,6 +78,53 @@ h1{
     margin-top: 10px;
 }
 
+@media (max-width: 480px) {
+
+    body{
+        padding: 10px;
+    }
+
+    .container{
+        width: 95%;
+        padding: 20px;
+        border-radius: 12px;
+    }
+
+    h1{
+        font-size: 22px;
+    }
+
+    #colorBox{
+        width: 120px;
+        height: 120px;
+        margin: 15px auto;
+    }
+
+    .buttons{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 8px;
+    }
+
+    .buttons button{
+        font-size: 14px;
+        padding: 10px;
+    }
+
+    .start{
+        font-size: 14px;
+        padding: 10px;
+    }
+
+    #score{
+        font-size: 14px;
+    }
+
+    .result{
+        font-size: 14px;
+    }
+}
+
+
     </style>
 </head>
 <body>
